hice muchos cambios assemblers config etc y modifique los pom de hateos y openapi